<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/background"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="102dp"
        android:layout_marginTop="17dp"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/noun1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/noun"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/noun2"
        android:layout_alignStart="@+id/noun2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/icons"/>

    <EditText
        android:id="@+id/noun2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_centerVertical="true"
        android:hint="@string/noun"
        android:background="@color/icons"/>
    <EditText
        android:id="@+id/noun3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/noun"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/noun1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/icons"/>
    <EditText
        android:id="@+id/adj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Adjective"
        android:background="@color/icons"
        android:layout_below="@+id/noun3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
    <EditText
        android:id="@+id/verb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Verb"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/adj"
        android:layout_alignStart="@+id/noun3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/icons"/>
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="See Mad Libs"
    android:background="@drawable/mybutton"
    android:id="@+id/submitMadLibsButton"
    android:layout_marginTop="92dp"
    android:layout_below="@+id/verb"
    android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LogIn"
        android:background="@drawable/mybutton"
        android:id="@+id/loginButton"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/submitMadLibsButton"
        android:layout_alignEnd="@+id/submitMadLibsButton" />

</RelativeLayout>